metabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "500m"  # 0.5 CPU core
              memory: "512Mi"  # 512 MiB of memory
            limits:
              cpu: "1000m"  # 1 CPU core
              memory: "1024Mi"  # 1 GiB of memory

---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: metabase
